feat: update project dependencies and implement Item component with motion effects; enhance Grid and Navbar layouts

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 	},
 	"dependencies": {
 		"@libsql/client": "^0.14.0",
-		"drizzle-orm": "^0.40.1"
+		"drizzle-orm": "^0.40.1",
+		"svelte-motion": "^0.12.2"
 	}
 }
