--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"test:e2e": "playwright test",
 		"db:push": "drizzle-kit push",
 		"db:migrate": "drizzle-kit migrate",
-		"db:studio": "drizzle-kit studio"
+		"db:studio": "drizzle-kit studio",
+		"db:seed": "node --loader ts-node/esm src/lib/server/db/seed.ts"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
@@ -44,6 +45,7 @@
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^4.0.0",
+		"ts-node": "^10.9.2",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.2.6",
@@ -51,6 +53,7 @@
 	},
 	"dependencies": {
 		"@libsql/client": "^0.14.0",
+		"dotenv": "^16.5.0",
 		"drizzle-orm": "^0.40.1",
 		"svelte-motion": "^0.12.2"
 	}
