--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
 		"eslint-plugin-svelte": "^3.0.0",
 		"globals": "^16.0.0",
 		"jsdom": "^26.0.0",
-		"postcss": "^8.5.5",
+		"postcss": "^8.5.6",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
@@ -54,6 +54,7 @@
 		"vitest": "^3.2.3"
 	},
 	"dependencies": {
+		"@friendofsvelte/toggle": "^0.0.4-svelte.5",
 		"@libsql/client": "^0.14.0",
 		"dotenv": "^16.5.0",
 		"drizzle-orm": "^0.40.1",
