--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
 		"strict": true,
 		"moduleResolution": "bundler"
 	},
-	"include": ["./src/**/*.svelte", "./src/**/*.ts", "./src/**/*.js", "./**/*.svelte"],
+	"include": ["./src/**/*.svelte", "./src/**/*.ts", "./src/**/*.js", "./**/*.svelte"]
 	// Path aliases are handled by https://svelte.dev/docs/kit/configuration#alias
 	// except $lib which is handled by https://svelte.dev/docs/kit/configuration#files
 	//
