--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"@tailwindcss/vite": "^4.0.0",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/svelte": "^5.2.4",
+		"@types/bcrypt": "^5.0.2",
 		"@types/node": "^22",
 		"autoprefixer": "^10.4.21",
 		"drizzle-kit": "^0.30.6",
@@ -57,6 +58,7 @@
 	"dependencies": {
 		"@friendofsvelte/toggle": "^0.0.4-svelte.5",
 		"@libsql/client": "^0.14.0",
+		"bcrypt": "^6.0.0",
 		"clsx": "^2.1.1",
 		"dotenv": "^16.5.0",
 		"drizzle-orm": "^0.40.1",
