--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"db:push": "drizzle-kit push",
 		"db:migrate": "drizzle-kit migrate",
 		"db:studio": "drizzle-kit studio",
-		"db:seed": "node --loader ts-node/esm src/lib/server/db/seed.ts"
+		"db:seed": "node --loader ts-node/esm src/lib/server/db/seed/seed.ts"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.5",
