--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"@testing-library/svelte": "^5.2.4",
 		"@types/bcrypt": "^5.0.2",
 		"@types/node": "^22",
+		"@types/pdfkit": "^0.12.12",
 		"autoprefixer": "^10.4.21",
 		"drizzle-kit": "^0.30.6",
 		"eslint": "^9.18.0",
@@ -42,6 +43,8 @@
 		"eslint-plugin-svelte": "^3.0.0",
 		"globals": "^16.0.0",
 		"jsdom": "^26.0.0",
+		"jspdf": "^2.5.1",
+		"pdfkit": "^0.15.2",
 		"postcss": "^8.5.6",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
